Add Johnny image to naming section

--- a/css/home.css
+++ b/css/home.css
@@ -296,6 +296,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    background-image: url('../img/visuals/Background/Vector/Johnny1.svg');
+    background-repeat: no-repeat;
+    background-position: 0 0;
+    background-size: contain;
 }
 
 .intro .naming .imgContainer {
