--- a/css/gear.css
+++ b/css/gear.css
@@ -5,7 +5,9 @@
 /* GUITARS */
 /* Start */
 .guitars .intro {
-    padding: 15px;
+    position: relative;
+
+    padding: 15px 15px 75px 15px;
     background-color: rgb(40, 40, 40);
     color: white;
     text-align: center;
@@ -51,7 +53,7 @@
 
 /* Details */
 .guitars .intro .frame {
-    background-color: rgba(0, 0, 0, 0.8);
+    background-color: rgba(0, 0, 0, 0.5);
     border: solid 3px white;
 }
 
@@ -132,27 +134,27 @@
     bottom: -200px;
 }
 
-/*.guitars .details .zigZagTop, .guitars .details .zigZagBottom {
+.guitars .intro .zigZag {
     position: absolute;
     width: 100%;
     height: 50px;
     left: 0;
 }
 
-.guitars .details .zigZagTop {
-    top: 0;
-
-    background-image: url('../img/visuals/Separators/ZigZagDownBlack.svg');
-    background-repeat: repeat;
-}
-
-.guitars .details .zigZagBottom {
+.guitars .intro .zigZagBottom {
     position: absolute;
     width: 100%;
     height: 50px;
     bottom: 0;
 
     background-image: url('../img/visuals/Separators/ZigZagUpWhite.svg');
+    background-repeat: repeat;
+}
+
+/*.guitars .details .zigZagTop {
+    top: 0;
+
+    background-image: url('../img/visuals/Separators/ZigZagDownBlack.svg');
     background-repeat: repeat;
 }*/
 
