Add real parallax to site bg

--- a/css/discography.css
+++ b/css/discography.css
@@ -1,6 +1,6 @@
 @import url('discographyFonts.css');
 
-.background {
+.GSBack {
     background-image: url('../img/visuals/Background/Back2.jpg');
 }
 
