--- a/css/site.css
+++ b/css/site.css
@@ -127,15 +127,6 @@ h1, h2, h3, h4, h5, h6 {
     font-style: normal;
 }
 
-.backgroundContainer {
-    background-color: black;
-
-    position: fixed;
-    z-index: -1;
-    width: 100%;
-    height: 100%;
-}
-
 .tabSet {
     display: flex;
     flex-direction: row;
@@ -164,11 +155,21 @@ h1, h2, h3, h4, h5, h6 {
     background-color: rgba(255, 255, 255, 0.2);
 }
 
-.background {
+.GSBackContainer {
+    background-color: black;
+
+    position: absolute;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+}
+
+.GSBack {
     opacity: 50%;
 
     background-position: center;
     background-size: cover;
+    background-repeat: no-repeat;
 
     width: 100%;
     height: 100%;
