--- a/css/site.css
+++ b/css/site.css
@@ -20,6 +20,7 @@ html, body {
     --crush40-lightred-hover: rgb(109, 0, 0);
 
     --crush40-red-pale: rgb(140, 30, 30);
+    --crush40-red-pale-transparent: rgba(140, 30, 30, 0.8);
     --crush40-red-pale-hover: rgb(160, 30, 30);
     --crush40-blue-pale: rgb(30, 30, 140);
     --crush40-blue-pale-hover: rgb(60, 30, 140);
@@ -125,6 +126,37 @@ h1, h2, h3, h4, h5, h6 {
 .btnLink {
     color: white;
     font-style: normal;
+}
+
+.generalList {
+    list-style-type: none;
+    padding: 0 0 0 10px;
+    margin: 0;
+
+    display: flex;
+}
+
+.generalList > li {
+    text-align: left;
+
+    box-sizing: border-box;
+    padding: 20px;
+    border: 2px solid white;
+    background-color: var(--crush40-red-pale-transparent);
+    margin-bottom: 10px;
+    margin-right: 10px;
+
+    display: flex;
+    flex-direction: column;
+
+    min-width: 300px;
+
+    color: white;
+    cursor: pointer;
+}
+
+.generalList > li:hover {
+    background-color: var(--crush40-red-pale-hover);
 }
 
 .tabSet {
