--- a/css/site.css
+++ b/css/site.css
@@ -47,6 +47,10 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: 700;
 }
 
+a {
+    color: var(--crush40-red);
+}
+
 .section {
     width: 100%;
     overflow: hidden;
