--- a/css/site.css
+++ b/css/site.css
@@ -49,6 +49,8 @@ h1, h2, h3, h4, h5, h6 {
 
 a {
     color: var(--crush40-red);
+    text-decoration: underline;
+    cursor: pointer;
 }
 
 .section {
