Add "Live Life" details + Fix centering

--- a/menus/css/songView.css
+++ b/menus/css/songView.css
@@ -101,6 +101,9 @@ body {
     justify-content: center;
     gap: 10px;
 }
+.performances .list .description {
+    text-align: center;
+}
 
 .versions {
     grid-area: versions;
