Add song navigation to "All Members"

--- a/css/discography.css
+++ b/css/discography.css
@@ -427,6 +427,10 @@
     justify-content: center;
 }
 
+.songs .songList .song .year {
+    margin: 0;
+}
+
 .songs .song {
     background-color: var(--crush40-red-pale);
 }
