Standardise dimentia font use

--- a/css/site.css
+++ b/css/site.css
@@ -53,6 +53,12 @@ a {
     cursor: pointer;
 }
 
+.dimentiaTitle {
+    font-family: 'Dimentia';
+    font-weight: 300;
+    color: red;
+}
+
 .section {
     width: 100%;
     overflow: hidden;
