--- a/css/gear.css
+++ b/css/gear.css
@@ -307,6 +307,11 @@
     gap: 20px;
 }
 
+.guitars .details .selectInfo .hidden {
+    position: absolute;
+    visibility: hidden;
+}
+
 .guitars .details .otherDetails, .guitars .details .selectInfo {
     padding-top: var(--guitar-half-height);
 }
