Add image viewing to details

--- a/css/gear.css
+++ b/css/gear.css
@@ -310,6 +310,10 @@
     justify-content: center;
 }
 
+.guitars .details .selectInfo .generalImg {
+    height: 300px;
+}
+
 .guitars .details .selectInfo {
     grid-area: select;
 
