--- a/css/gear.css
+++ b/css/gear.css
@@ -232,6 +232,8 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+
+    overflow-x: auto;
 }
 
 .guitar .hover {
@@ -285,10 +287,13 @@
     width: 100%;
 
     display: grid;
-    grid-template-rows: auto;
-    grid-template-columns: 500px 1fr;
-    grid-template-areas: "more select";
     flex-direction: column;
+
+    /* Smallscreen */
+    grid-template-rows: auto auto;
+    grid-template-areas: 
+        "select"
+        "more";
 }
 
 .guitars .details.noGtr .otherDetails, .guitars .details.noGtr .selectInfo {
@@ -302,16 +307,19 @@
 
 .guitars .details .otherDetails {
     grid-area: more;
-    border-right: solid 3px red;
+    
     padding: 50px 20px;
 
     display: flex;
     flex-direction: column;
     justify-content: center;
+
+    /* Smallscreen */
+    border-top: solid 3px red;
 }
 
 .guitars .details .selectInfo .generalImg {
-    height: 300px;
+    width: 30%;
 }
 
 .guitars .details .selectInfo {
@@ -327,6 +335,24 @@
     gap: 20px;
 }
 
-.guitars .details .otherDetails, .guitars .details .selectInfo {
+@media (min-width: 1100px)
+{
+    .guitars .details {
+        grid-template-rows: auto;
+        grid-template-columns: 500px 1fr;
+        grid-template-areas: "more select";
+    }
+
+    .guitars .details .otherDetails {
+        border-top: none;
+        border-right: solid 3px red;
+    }
+
+    .guitars .details .otherDetails {
+        padding-top: var(--guitar-half-height);
+    }
+}
+
+.guitars .details .selectInfo {
     padding-top: var(--guitar-half-height);
 }
