--- a/css/gear.css
+++ b/css/gear.css
@@ -4,7 +4,7 @@
 
 /* GUITARS */
 /* Start */
-.guitars .intro {
+.intro {
     position: relative;
 
     padding: 15px 15px 75px 15px;
@@ -17,7 +17,7 @@
     background-size: cover;
 }
 
-.guitars .intro .start {
+.intro .start {
     display: grid;
 
     /* Smallscreen */
@@ -27,14 +27,14 @@
         "text";
 }
 
-.guitars .intro .start .text {
+.intro .start .text {
     grid-area: text;
     align-self: center;
     text-align: left;
     font-size: 150%;
 }
 
-.guitars .intro .start .img {
+.intro .start .img {
     grid-area: img;
     justify-self: center;
     height: 500px;
@@ -44,7 +44,7 @@
 
 @media (min-width: 1000px)
 {
-    .guitars .intro .start {
+    .intro .start {
         grid-template-rows: auto;
         grid-template-columns: 50% 50%;
         grid-template-areas: "text img";
@@ -52,12 +52,12 @@
 }
 
 /* Details */
-.guitars .intro .frame {
+.intro .frame {
     background-color: rgba(0, 0, 0, 0.5);
     border: solid 3px white;
 }
 
-.guitars .intro .imgSet {
+.intro .imgSet {
     position: relative;
 
     display: flex;
@@ -69,14 +69,14 @@
     padding: 20px 0;
 }
 
-.guitars .intro .imgSet .imgFrame {
+.intro .imgSet .imgFrame {
     text-align: center;
     font-size: 110%;
     padding: 10px;
     max-width: 100%;
 }
 
-.guitars .intro .imgSet .img {
+.intro .imgSet .img {
     max-width: 100%;
     object-fit: scale-down;
 
@@ -85,21 +85,21 @@
 
 @media (min-width: 980px)
 {
-    .guitars .intro .imgSet {
+    .intro .imgSet {
         flex-direction: row;
     }
 
-    .guitars .intro .imgSet .imgFrame {
+    .intro .imgSet .imgFrame {
         min-width: 350px;
     }
 
-    .guitars .intro .imgSet .img {
+    .intro .imgSet .img {
         height: 350px;
         max-height: unset;
     }
 }
 
-.guitars .quoteFrame {
+.intro .quoteFrame {
     position: relative;
     width: 100%;
 
@@ -107,7 +107,7 @@
     font-size: 150%;
 }
 
-.guitars .quoteFrame .quotation {
+.intro .quoteFrame .quotation {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -118,33 +118,33 @@
     position: relative;
 }
 
-.guitars .quoteFrame .quotation .mark {
+.intro .quoteFrame .quotation .mark {
     position: absolute;
     font-size: 300px;
     font-style: italic;
     margin: 0;
 }
 
-.guitars .quoteFrame .quotationStart {
+.intro .quoteFrame .quotationStart {
     /* Smallscreen */
     left: -30px;
     top: -20px;
 }
 
-.guitars .quoteFrame .quotationEnd {
+.intro .quoteFrame .quotationEnd {
     /* Smallscreen */
     right: 50px;
     bottom: -200px;
 }
 
-.guitars .intro .zigZag {
+.intro .zigZag {
     position: absolute;
     width: 100%;
     height: 50px;
     left: 0;
 }
 
-.guitars .intro .zigZagBottom {
+.intro .zigZagBottom {
     position: absolute;
     width: 100%;
     height: 50px;
@@ -161,7 +161,7 @@
     background-repeat: repeat;
 }*/
 
-.guitars .explorer {
+.explorer {
     z-index: 1;
     background: none;
     color: black;
@@ -171,13 +171,13 @@
     background-color: white;
 }
 
-.guitars .explorer .selection {
+.explorer .selection {
     overflow-x: auto;
     padding: 20px;
     margin-bottom: 20px;
 }
 
-.guitars .explorer .selection .selectionList {
+.explorer .selection .selectionList {
     padding: 0;
     margin: 0;
     display: flex;
@@ -185,7 +185,7 @@
     list-style-type: none;
 }
 
-.guitars .explorer .selection li {
+.explorer .selection li {
     min-width: 210px;
     padding: 15px;
     margin: 10px;
@@ -193,25 +193,25 @@
     border: black solid 3px;
 }
 
-.guitars .explorer .selection .guitarBtn:not(.selected) {
+.explorer .selection .guitarBtn:not(.selected) {
     cursor: pointer;
     background-color: var(--crush40-red-pale-transparent);
 }
 
-.guitars .explorer .selection .guitarBtn:not(.selected):hover {
+.explorer .selection .guitarBtn:not(.selected):hover {
     background-color: var(--crush40-red-pale-hover);
 }
 
-.guitars .explorer .selection .selected {
+.explorer .selection .selected {
     background-color: var(--crush40-blue-pale-transparent);
 }
 
-.guitars .explorer .selection .multiItem {
+.explorer .selection .multiItem {
     min-width: 540px;
     background-color: rgba(0, 0, 0, 0.2);
 }
 
-.guitars .explorer .selection .multiItem ul {
+.explorer .selection .multiItem ul {
     list-style-type: none;
     padding: 0;
     display: flex;
@@ -220,7 +220,7 @@
     box-sizing: border-box;
 }
 
-.guitars .explorer .selection .multiItem .guitarBtn {
+.explorer .selection .multiItem .guitarBtn {
     height: 100%;
 }
 
@@ -277,7 +277,7 @@
     min-width: 1000px;
 }
 
-.guitars .details {
+.explorer .details {
     position: relative;
     
     color: white;
@@ -296,16 +296,16 @@
         "more";
 }
 
-.guitars .details.noGtr .otherDetails, .guitars .details.noGtr .selectInfo {
+.explorer .details.noGtr .otherDetails, .explorer .details.noGtr .selectInfo {
     visibility: hidden;
 }
 
-.guitars .details .hidden {
+.explorer .details .hidden {
     position: absolute;
     visibility: hidden;
 }
 
-.guitars .details .otherDetails {
+.explorer .details .otherDetails {
     grid-area: more;
     
     padding: 50px 20px;
@@ -318,11 +318,11 @@
     border-top: solid 3px red;
 }
 
-.guitars .details .selectInfo .generalImg {
+.explorer .details .selectInfo .generalImg {
     width: 30%;
 }
 
-.guitars .details .selectInfo {
+.explorer .details .selectInfo {
     grid-area: select;
 
     padding: 50px;
@@ -337,22 +337,22 @@
 
 @media (min-width: 1100px)
 {
-    .guitars .details {
+    .explorer .details {
         grid-template-rows: auto;
         grid-template-columns: 500px 1fr;
         grid-template-areas: "more select";
     }
 
-    .guitars .details .otherDetails {
+    .explorer .details .otherDetails {
         border-top: none;
         border-right: solid 3px red;
     }
 
-    .guitars .details .otherDetails {
+    .explorer .details .otherDetails {
         padding-top: var(--guitar-half-height);
     }
 }
 
-.guitars .details .selectInfo {
+.explorer .details .selectInfo {
     padding-top: var(--guitar-half-height);
 }
