--- a/css/gear.css
+++ b/css/gear.css
@@ -335,6 +335,24 @@
     gap: 20px;
 }
 
+.explorer .details .selectInfo .pickupInfo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.explorer .details .selectInfo .pickups {
+    display: flex;
+    flex-direction: row;
+    background-color: red;
+    gap: 3px;
+}
+
+.explorer .details .selectInfo .pickup {
+    background-color: black;
+    padding: 25px;
+}
+
 @media (min-width: 1100px)
 {
     .explorer .details {
