--- a/menus/css/albumView.css
+++ b/menus/css/albumView.css
@@ -593,6 +593,7 @@ body {
 }
 
 .physical .obi .translation {
+    border: 2px solid white;
     background-color: rgba(0, 0, 0, 0.7);
     padding: 10px;
 
