--- a/menus/css/songView.css
+++ b/menus/css/songView.css
@@ -66,7 +66,7 @@ body {
 @media (min-width: 850px)
 {
     body {
-        grid-template-rows: auto 1fr auto;
+        grid-template-rows: auto auto 1fr;
         grid-template-columns: 410px 1fr;
         grid-template-areas:
             "intro versions"
